# amdgpu-lsp

./: .gitignore  Cargo.toml  README.md  build.sh  fetch.sh  index.html.1  test.rdna  test.rdna35
.github/workflows/: release.yml
data/: isa.json
scripts/: bump_version.sh  create_release.sh  package.sh  set-version.sh
scripts/git-hooks/: pre-push
src/: architecture.rs  encoding.rs  formatting.rs  index.rs  main.rs  server.rs  text_utils.rs  types.rs
vscode-extension/: .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: rdna.tmLanguage.json
