[package]
name = "amdgpu-lsp"
version = "0.2.1"
edition = "2024"

[dependencies]
quick-xml = "0.36.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.39.3", features = ["io-std", "macros", "rt"] }
tower-lsp = { version = "0.20.0", default-features = false, features = ["runtime-tokio"] }

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
